0.13.12 - 2019-xx-xx

  1. POM updates for GCS connector 1.9.12.


0.13.11 - 2018-12-20

  1. POM updates for GCS connector 1.9.11.

  2. Update all dependencies to latest versions.


0.13.10 - 2018-11-01

  1. POM updates for GCS connector 1.9.10.


0.13.9 - 2018-10-19

  1. POM updates for GCS connector 1.9.9.


0.13.8 - 2018-10-03

  1. POM updates for GCS connector 1.9.8.


0.13.7 - 2018-09-20

  1. POM updates for GCS connector 1.9.7.


0.13.6 - 2018-08-30

  1. POM updates for GCS connector 1.9.6.

  2. Migrate logging to Google Flogger.

     To configure Log4j as a Flogger backend set `flogger.backend_factory`
     system property to `com.google.common.flogger.backend.log4j.Log4jBackendFactory#getInstance`
     or `com.google.cloud.hadoop.repackaged.bigquery.com.google.common.flogger.backend.log4j.Log4jBackendFactory#getInstance`
     if using shaded jar.

     For example:

       java -Dflogger.backend_factory=com.google.common.flogger.backend.log4j.Log4jBackendFactory#getInstance ...

  3. Poll BQ jobs in their correct locations.

  4. Update all dependencies to latest versions.


0.13.5 - 2018-08-09

  1. POM updates for GCS connector 1.9.5.

  2. Improve build configuration (`pom.xml`s) compatibility with Maven release
     plugin.

     Changes version string from `0.13.5-hadoop2` to `hadoop2-0.13.5`.

  3. Update Maven plugins versions.


0.13.4 - 2018-08-07

  1. POM updates for GCS connector 1.9.4.

  2. Update all dependencies to latest versions.


0.13.3 - 2018-07-25

  1. POM updates for GCS connector 1.9.3.

  2. Fix Ivy compatibility - resolve artifact versions in released `pom.xml`
     files.


0.13.2 - 2018-07-18

  1. POM updates for GCS connector 1.9.2.


0.13.1 - 2018-07-11

  1. POM updates for GCS connector 1.9.1.


0.13.0 - 2018-06-15

  1. POM updates for GCS connector 1.9.0.

  2. Update all dependencies to latest versions.

  3. Change Maven project structure to be better compatible with IDEs.

  4. Support Hadoop 3.
