@@ -2,6 +2,8 @@
 
   1. POM updates for GCS connector 1.9.12.
 
+  2. Improve exception message for BigQuery job execution errors.
+
 
 0.13.11 - 2018-12-20
 
